# Lumina-Note

./: .gitignore  LICENSE  Lumina-Note-Setup-Guide.md  README.en.md  README.ja.md  README.md  RELEASE_NOTES.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: AGENT_DEVELOPMENT.md  AGENT_PLANNER_ROADMAP.md  LLM_REQUEST_TIMEOUT.md  LOCAL_OLLAMA_DEEPSEEK_R1.md  PDF_READER_DESIGN.md  ROADMAP.md  TABBAR_INTEGRATION_GUIDE.md  实时模式参考.md  悬挂测试.md  流式传输roo.md
scripts/: pp_structure_server.py  requirements-pp-structure.txt  simple_pdf_server.py
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/fs/: manager.rs  mod.rs  watcher.rs
src-tauri/src/webdav/: sync.rs
src/agent/: types.ts
src/agent/core/: AgentLoop.ts  StateManager.ts
src/agent/modes/: index.ts
src/agent/prompts/: PromptBuilder.ts
src/agent/tools/: ToolRegistry.ts  index.ts
src/components/: AIFloatingPanel.tsx  AgentPanel.tsx  KnowledgeGraph.tsx  MainAIChatShell.tsx  Ribbon.tsx  RightPanel.tsx  SettingsModal.tsx  Sidebar.tsx  TabBar.tsx  VideoNoteView.tsx
src/components/ai/: AIFloatingPanel.tsx  AISettingsModal.tsx  (+1 more)
src/editor/: CodeMirrorEditor.tsx
src/hooks/: usePDFStructure.ts  useTimeout.ts
src/lib/: ai.ts  crypto.ts  markdown.ts  tauri.ts  themes.ts
src/stores/: useAIStore.ts  useAgentStore.ts  useBrowserStore.ts  useDatabaseStore.ts  useFileStore.ts  useRAGStore.ts  useUIStore.ts
src/styles/: globals.css
src/types/: database.ts
(+67 files in other folders)
