[package]
name = "lumina-note"
version = "0.1.0"
description = "A local-first AI-powered note-taking app"
authors = ["Lumina Note Contributors"]
edition = "2021"

[lib]
name = "lumina_note_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
notify = "6.1"
walkdir = "2.5"
thiserror = "2.0"

# RAG / Vector Storage
rusqlite = { version = "0.32", features = ["bundled"] }
bincode = "1.3"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
